# peculiarz.one

./: .env  .gitignore  Cargo.toml  README.md  some-breads.md
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: bread-world.html  index.html  notfound.html
crates/bread-world/: Cargo.toml
crates/bread-world-cli/: Cargo.toml
crates/bread-world-cli/src/: main.rs
crates/bread-world-models/: Cargo.toml
crates/bread-world-models/src/: lib.rs
crates/bread-world-web/: Cargo.toml
crates/bread-world/src/: lib.rs  main.rs
crates/knowledge/: Cargo.toml
crates/knowledge-models/: Cargo.toml
crates/knowledge-web/: Cargo.toml
src/: config.rs  crud.rs  lib.rs  main.rs
src/api/: bread_world.rs  knowledge.rs  mod.rs
static/: bread-world.html
xtask/: Cargo.toml  README.md
xtask/src/: cli.rs  main.rs  section.rs  tasks.rs
