[package]
name = "peculiarzone"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://www.peculiarz.one/"
repository = "https://github.com/CBenoit/peculiarzone"
authors = ["Benoît CORTIER <bcortier@proton.me>"]
publish = false

[workspace]
members = [
  "crates/*",
  "xtask",
]

[dependencies]
anyhow = "1.0.68"
axum = "0.6.4"
axum-extra = { version = "0.4.2", features = ["spa"] }
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"