[package]
name = "peculiarzone"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://www.peculiarz.one/"
repository = "https://github.com/CBenoit/peculiarzone"
authors = ["Benoît CORTIER <bcortier@proton.me>"]
publish = false

[workspace]
members = [
  "crates/*",
  "xtask",
]

[dependencies]

# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# Async
tokio = { version = "1.24.1", features = ["full"] }
axum = "0.6.4"
axum-extra = { version = "0.6.0", features = [] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "fs"] }

# Utils
menv = "0.2.5"
dotenvy = "0.15.6"
anyhow = "1.0.68"
tap = "1.0.1"
