[package]
name = "bread-world-cli"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://www.peculiarz.one/"
repository = "https://github.com/CBenoit/peculiarzone"
authors = ["Benoît CORTIER <bcortier@proton.me>"]
publish = false

[dependencies]
bread-world-models = { path = "../bread-world-models" }
bread-world = { path = "../bread-world" }
log = "0.4.17"
uom = { version = "0.33.0", default-features = false, features = ["si", "f64"] }
clap = { version = "4", features = ["derive"] }
ureq = { version = "2.6.2", features = ["json"] }
ulid = { version = "1.0.0", default-features = false, features = ["std"] }
anyhow = "1.0.69"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
serde_json = "1.0.93"
scrawl = "2.0.0"
tap = "1.0.1"
