[package]
name = "bread-world-models"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://www.peculiarz.one/"
repository = "https://github.com/CBenoit/peculiarzone"
authors = ["Benoît CORTIER <bcortier@proton.me>"]
publish = false

[dependencies]
uom = { version = "0.33.0", default-features = false, features = ["si", "f64", "serde"] }
ulid = { version = "1.0.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
