[package]
name = "bread-world"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://www.peculiarz.one/"
repository = "https://github.com/CBenoit/peculiarzone"
authors = ["Benoît CORTIER <bcortier@proton.me>"]
publish = false

[dependencies]
bread-world-models = { path = "../bread-world-models" }
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
ellp = "0.2.0"
ulid = { version = "1.0.0", default-features = false, features = ["std"] }
log = "0.4.17"
uom = { version = "0.33.0", default-features = false, features = ["si", "f64"] }
web-sys = { version = "0.3.61", features = ["HtmlSelectElement", "HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }

# Enable WebAssembly support
getrandom = { version = "*", features = ["js"] }